--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "C_Cpp.default.compileCommands": "/home/cameronknauff/Documents/stillTerm/builddir/compile_commands.json"
+    "C_Cpp.default.compileCommands": "/home/cameronknauff/Documents/stillTerm/builddir/compile_commands.json",
+    "editor.rulers": [
+        120
+    ]
 }
