--- a/src/meson.build
+++ b/src/meson.build
@@ -10,11 +10,12 @@ dependencies = [
   dependency('gobject-2.0'),
   dependency('gtk4'),
   dependency('libadwaita-1'),
+  dependency('json-glib-1.0'),
   dependency('vte-2.91-gtk4', version: '>= 0.69.0'),
 ]
 
 executable(
-  'stillterm',
+  'stillTerminal',
   sources,
   dependencies: dependencies,
   install: true
