--- a/src/meson.build
+++ b/src/meson.build
@@ -7,6 +7,7 @@ subdir('StVte')
 
 dependencies = [
   dependency('glib-2.0'),
+  dependency('gee-0.8')
   dependency('gobject-2.0'),
   dependency('gtk4'),
   dependency('libadwaita-1'),
