Implementing BlackBox's Headerbar into stillTerminal

--- a/src/StTerminal/meson.build
+++ b/src/StTerminal/meson.build
@@ -1,7 +1,6 @@
 sources += files(
   'StTerminal.vala',
-  'StTerminalPage.vala',
-  'StTerminalSettings.vala',
+  'StSettings.vala',
   'StColorScheme.vala',
   'StProfile.vala',
 )
