Working on ProfileCreator

--- a/src/StPreferences/meson.build
+++ b/src/StPreferences/meson.build
@@ -1,5 +1,7 @@
 sources += files(
   'StPrefsDialog.vala',
   'StPrefsGeneralPage.vala',
-  'StPrefsProfilePage.vala'
+  'StPrefsProfilePage.vala',
+  'StPrefsProfileCreator.vala',
+  'StPrefsProfileEditor.vala'
 )
